Fix get Medias and add getMatchs
